--- a/uni.scss
+++ b/uni.scss
@@ -15,10 +15,10 @@
 /* 颜色变量 */
 
 /* 行为相关颜色 */
-$uni-color-primary: #007aff;
-$uni-color-success: #4cd964;
-$uni-color-warning: #f0ad4e;
-$uni-color-error: #dd524d;
+$uni-color-primary: #2a2cff;
+$uni-color-success: #21db00;
+$uni-color-warning: #ead758;
+$uni-color-error: #de406c;
 
 /* 文字基本颜色 */
 $uni-text-color:#333;//基本色
